# Anytranslate

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  trans_api.py
api/: PYtranslator.py  __init__.py  constant.py
docs/: conf.py
tests/: test_constant.py
