[tool.poetry]
name = "anytranslate"
version = "0.1.0"
description = ""
authors = ["kbshal"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
requests = "^2.27.1"
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
